# OnePack

./: .gitignore  config.yaml  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: build-windows.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  installer.rs  main.rs
src/components/: AddPackageDialog.vue  BatchOperationDialog.vue  BottomBar.vue  ConfigEditorDialog.vue  EditPackageDialog.vue  ImportCompareDialog.vue  PackageList.vue  Sidebar.vue  ToastContainer.vue
src/composables/: useToast.ts
src/styles/: global.css
src/types/: index.ts
